# robot-main

./: .gitignore  README.md  pyproject.toml
data/calibrations/0/: camera_calibration_0.npz
data/calibrations/2/: camera_calibration_2.npz
src/: __init__.py  main.py  robot.py
src/api/: __init__.py  camera_handler.py  server.py
src/app/: main.py  options.py
src/core/: __init__.py  affinite_cpu.py  alignement_fluide.py  alignement_tri_caisses.py  aruco.py  camera.py  leds.py  lidar.py  logs.py  mecanum.py  mecanumNEW.py  pince.py  recuperation_caisses.py  robot.py  servomoteur.py  strategy.py  strategy.py.save  test.py  test_3leds.py  tri_couleurs.py  ultrasson.py
src/hardware/: __init__.py  camera.py  lidar.py  main_lidar_exemple
src/modules/: AffichageWeb.py  Aruco.py  Map.py  MapGUI.py  MecaNum.py  MecaNumTest.py  Robot.py  Simulation.py  Strategy.py  __init__.py
src/web/: __init__.py  dashboard.py  map_gui.py
src/web/static/: dashboard.css  dashboard.js
src/web/templates/: dashboard.html
src/world/: __init__.py  map.py
